--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,18 @@
             <version>1.2.17</version>
         </dependency>
 
+        <dependency>
+            <groupId>pircbot</groupId>
+            <artifactId>pircbot</artifactId>
+            <version>1.5.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.json4s</groupId>
+            <artifactId>json4s-native_2.11</artifactId>
+            <version>LATEST</version>
+        </dependency>
+
 
 
 
